# property-search-backend

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-image.yml
resources/: austinHousingSchema.json
scripts/: download_data.sh  drop_tables.sql  format.sh  lint.sh  recreate_attribute_index.sql  recreate_content_index.sql  recreate_tables.sh  start_local_docker.sh
src/app/: constants.py  crud.py  main.py
src/app/api/: deps.py  main.py
src/app/api/routes/: properties.py
src/app/core/: config.py  db.py  logger.py
